# mini-os

./: CMakeLists.txt
image/: collapse.elf  execpt.elf  init.elf  kernel.elf  loop.elf  multi.elf  os_test.elf  shell.elf  snake.elf  uart_test.elf
inc/tools/: uart.h
newlib/arm-myos/include/: newlib.h
script/: JLinkCMD-download.sh  JLinkGDBServer-run.sh  download.jlink  img-write-linux.sh  wsl-serialPort-start.sh
src/applib/: CMakeLists.txt  crt0.S  cstart.c  lib_syscall.c  lib_syscall.h
src/collapse/: CMakeLists.txt
src/execpt/: CMakeLists.txt  link.lds  main.c
src/inc/common/: boot_info.h  cpu_instr.h  elf.h  os_config.h  register_addr.h  types.h
src/inc/tools/: assert.h  bitmap.h  klib.h  list.h  log.h
src/init/: CMakeLists.txt  init.S  init.lds
src/kernel/: CMakeLists.txt  init.S  init.c  kernel.lds
src/kernel/core/: dev.c  disk.c  irq.c  memory.c  mmu.c  sys_exception.c  syscall.c  task.c  tty.c
src/kernel/dev/: gpio.c  nandflash.c  sd.c  sdi.bak  timer.c  uart.c
src/kernel/first_task/: first_task.c  first_task_entry.S  lib_syscall.c
src/kernel/fs/: file.c  fs.c
src/kernel/fs/devfs/: devfs.c
src/kernel/fs/fatfs/: fatfs.c  fatfs_32.c
src/kernel/inc/core/: dev.h  disk.h  irq.h  memory.h  mmu.h  sys_exception.h  syscall.h  task.h  tty.h
src/kernel/inc/dev/: gpio.h  nandflash.h  sd.h  timer.h  uart.h
src/kernel/inc/fs/: file.h  fs.h
src/kernel/inc/fs/devfs/: devfs.h
src/kernel/inc/fs/fatfs/: fatfs.h
src/kernel/inc/ipc/: mutex.h  sem.h
src/kernel/inc/soc/: gpio.h  timer.h  uart.h
src/kernel/ipc/: mutex.c  sem.c
src/kernel/soc/: gpio.c  timer.c  uart.c
src/led_test/: CMakeLists.txt  led_on.S
src/loop/: CMakeLists.txt  main.c
src/multi/: CMakeLists.txt  main.c
src/os_test/: CMakeLists.txt  main.c  main.h
src/shell/: CMakeLists.txt  link.lds  main.c  main.h
src/snake/: CMakeLists.txt  link.lds  main.c  main.h
src/test_1/: CMakeLists.txt  asm.S  asm_dis.txt  main.c
src/tools/: assert.c  bitmap.c  faker.c  klib.c  list.c  log.c  uart.c
src/uart_test/: CMakeLists.txt  init.S  main.c
